	* don't use pointers to resume_data and file_priorities in add_torrent_params
	* allow moving files to absolute paths, out of the download directory
	* make move_storage more generic to allow both overwriting files as well as taking existing ones
	* fix choking issue at high upload rates
	* optimized rate limiter
	* make disk cache pool allocator configurable
	* fix library ABI to not depend on logging being enabled
	* use hex encoding instead of base32 in create_magnet_uri
	* include name, save_path and torrent_file in torrent_status, for improved performance
	* separate anonymous mode and force-proxy mode, and tighten it up a bit
	* add per-tracker scrape information to announce_entry
	* report errors in read_piece_alert
	* DHT memory optimization
	* improve DHT lookup speed
	* improve support for windows XP and earlier
	* introduce global connection priority for improved swarm performance
	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* fix boost-1.42 support for python bindings
	* fix memory allocation issue (virtual addres space waste) on windows

0.16.11 release

	* fix web seed URL double escape issue
	* fix string encoding issue in alert messages
	* fix SSL authentication issue
	* deprecate std::wstring overloads. long live utf-8
	* improve time-critical pieces feature (streaming)
	* introduce bandwidth exhaustion attack-mitigation in allowed-fast pieces
	* python binding fix issue where torrent_info objects where destructing when their torrents were deleted
	* added missing field to scrape_failed_alert in python bindings
	* GCC 4.8 fix
	* fix proxy failure semantics with regards to anonymous mode